--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "MTA4NTMyMTUyMTAzMzEzNDA5MQ.GPcIJI.mQT_t56JELQKfDJNQrmIG6RUjpjzLKSb-xNS_4",
-    "clientId": "1085321521033134091",
-    "guildId": "1066356817543835648"
+    "token": "token",
+    "clientId": "clientid del bot",
+    "guildId": "serverid"
 }
